--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "obsidian-comments-manager",
-	"name": "Comments Manager (Beta - Print Mode)",
-	"version": "1.1.0-beta",
+	"name": "Comments Manager",
+	"version": "1.2.0",
 	"minAppVersion": "0.15.0",
 	"description": "Manage comments in your Obsidian notes with a dedicated side panel. Edit, delete, and navigate comments easily. NEW: Print Mode - Convert comments to callouts for PDF export!",
 	"author": "Graham Smale",
