--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-footnotes-manager",
-  "version": "1.0.0",
-  "description": "A plugin to manage footnotes in Obsidian",
+  "name": "obsidian-comments-manager",
+  "version": "1.2.1",
+  "description": "A plugin to manage comments in Obsidian",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
@@ -9,7 +9,7 @@
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
-  "author": "",
+  "author": "Graham Smale",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.18.126",
